--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,7 +18,7 @@ jobs:
           EOF
 
       - id: setup-tests
-        name: Setup test container registry and NPM registry
+        name: Setup test container registry
         run: |
           docker run -d -p 5000:5000 \
               -v ${{ github.workspace }}/tests/auth:/auth \
