--- a/tests/workflow-test/.devcontainer/docker-compose.yaml
+++ b/tests/workflow-test/.devcontainer/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
     networks:
       - workflow-test-network
   workflow-test-registry:
-    container_name: npm-registry
+    container_name: actions-publish-npm-registry
     image: verdaccio/verdaccio:6.1.2
     ports:
       - "4873:4873"
