Attempt to debug the container logging

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "absolutelib",
         "bierner",
         "devcontainers",
         "dorny",
@@ -7,8 +8,12 @@
         "jetmartin",
         "mhutchie",
         "mktemp",
+        "myscope",
+        "npmjs",
         "pipefail",
+        "scopedpkg",
         "spritely",
+        "subdirlib",
         "testpassword",
         "testproject",
         "testuser",
