--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,6 +39,7 @@ jobs:
             bats --version
             bats --print-output-on-failure --report-formatter junit --output ./test-results/ ./tests/
           push: never
+          imageName: localhost:5000/workflow-test-devcontainer
 
       - name: Add test report title
         if: always()
