--- a/tests/workflow-test/.devcontainer/docker-compose.yaml
+++ b/tests/workflow-test/.devcontainer/docker-compose.yaml
@@ -1,10 +1,8 @@
 services:
   workflow-test-dev:
     container_name: workflow-test-dev
-    image: workflow-test-devcontainer:latest
-#    command: /bin/sh -c "sleep infinity"
-    command: >
-      /bin/sh -c 'echo "CUSTOM_DEVCONTAINER: workflow-test-container" > /logs/devcontainer.log && sleep 10'
+    image: localhost:5000/workflow-test-devcontainer:latest
+    command: /bin/sh -c "sleep infinity"
     volumes:
       - ../:/src
       - ../tests/workflow-test/logs:/logs
