Add debug and logging to see why there is an issue with verdaccio registry

--- a/tests/auth/config.yaml
+++ b/tests/auth/config.yaml
@@ -9,7 +9,7 @@ uplinks:
 packages:
   '**':
     access: $all
-    publish: $all
+    publish: $authenticated
     proxy: npmjs
 log:
   level: info
