Create output directory before running bats tests

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,6 +36,7 @@ jobs:
         if: always()
         with:
           runCmd: |
+            mkdir -p ./test-results/
             bats --version
             bats --print-output-on-failure --report-formatter junit --output ./test-results/ ./tests/
           push: never
