--- a/tests/workflow-test/.devcontainer/docker-compose.yaml
+++ b/tests/workflow-test/.devcontainer/docker-compose.yaml
@@ -13,15 +13,9 @@ services:
   workflow-test-registry:
     container_name: workflow-test-registry
     image: verdaccio/verdaccio:6.1.2
-    ports:
-      - "4873:4873"
     volumes:
-      - ../tests/verdaccio-storage:/verdaccio/storage
-      - ../tests/auth/config.yaml:/verdaccio/conf/config.yaml
-      - ../tests/auth/htpasswd:/verdaccio/conf/htpasswd
-    environment:
-      - VERDACCIO_ADMIN_USER=testuser
-      - VERDACCIO_ADMIN_PASSWORD=testpassword
+      - ../tests/verdaccio/storage:/verdaccio/storage
+    user: root
     networks:
       - workflow-test-network
 networks:
