--- a/tests/workflow-test/action.yaml
+++ b/tests/workflow-test/action.yaml
@@ -16,8 +16,8 @@ runs:
       run: |
         # Set up test environment with required directories
         mkdir -p "${{ github.workspace }}/tests/workflow-test/logs"
-        mkdir -p "${{ github.workspace }}/tests/verdaccio-storage"
-        rm -rf "${{ github.workspace }}/tests/verdaccio-storage/"*
+        # mkdir -p "${{ github.workspace }}/tests/verdaccio/storage"
+        # rm -rf "${{ github.workspace }}/tests/verdaccio/storage/"*
 
         # Back up existing .devcontainer
         if [ -d "${{ github.workspace }}/.devcontainer" ]; then
@@ -69,25 +69,26 @@ runs:
             ls -la "${{ github.workspace }}/tests/workflow-test/logs/"
         fi
 
-    # - name: Assert npm package was published
-    #   shell: bash
-    #   if: always()
-    #   run: |
-    #     source ${{ github.workspace }}/tests/test-reporter.sh
-    #     set_test_name "Assert npm package was published"
+    - name: Assert npm package was published
+      uses: devcontainers/ci@v0.3
+      push: never
+      if: always()
+      runCmd: |
+        source ${{ github.workspace }}/tests/test-reporter.sh
+        set_test_name "Assert npm package was published"
 
-    #     # Query the npm server API to check if the package exists
-    #     response=$(curl -s -o /tmp/npm_response.json -w "%{http_code}" "http://localhost:4873/testproject/1.0.0-${{ github.run_id }}-${{ github.run_attempt }}.json")
+        # Query the npm server API to check if the package exists
+        response=$(curl -s -o /tmp/npm_response.json -w "%{http_code}" "http://workflow-test-registry:4873/testproject/1.0.0-${{ github.run_id }}-${{ github.run_attempt }}.json")
 
-    #     if [ "$response" -eq 200 ]; then
-    #         success "Npm package was published successfully"
-    #     else
-    #         failure "Npm package was not found on the server (HTTP $response)"
-    #         echo "Full response from Verdaccio:"
-    #         cat /tmp/npm_response.json
-    #         echo "Search results on Verdaccio:"
-    #         curl -s "http://localhost:4873/-/verdaccio/packages" | grep '"name":"testproject"'
-    #     fi
+        if [ "$response" -eq 200 ]; then
+            success "Npm package was published successfully"
+        else
+            failure "Npm package was not found on the server (HTTP $response)"
+            echo "Full response from Verdaccio:"
+            cat /tmp/npm_response.json
+            echo "Search results on Verdaccio:"
+            curl -s "http://workflow-test-registry:4873/-/verdaccio/packages" | grep '"name":"testproject"'
+        fi
 
     # - name: Capture Verdaccio logs
     #   if: always()
