--- a/tests/workflow-test/action.yaml
+++ b/tests/workflow-test/action.yaml
@@ -71,24 +71,24 @@ runs:
 
     - name: Assert npm package was published
       uses: devcontainers/ci@v0.3
-      push: never
       if: always()
-      runCmd: |
-        source ${{ github.workspace }}/tests/test-reporter.sh
-        set_test_name "Assert npm package was published"
+      with:
+        push: never
+        runCmd: |
+          source ${{ github.workspace }}/tests/test-reporter.sh
+          set_test_name "Assert npm package was published"
 
-        # Query the npm server API to check if the package exists
-        response=$(curl -s -o /tmp/npm_response.json -w "%{http_code}" "http://workflow-test-registry:4873/testproject/1.0.0-${{ github.run_id }}-${{ github.run_attempt }}.json")
+          response=$(curl -s -o /tmp/npm_response.json -w "%{http_code}" "http://workflow-test-registry:4873/testproject/1.0.0-${{ github.run_id }}-${{ github.run_attempt }}.json")
 
-        if [ "$response" -eq 200 ]; then
-            success "Npm package was published successfully"
-        else
-            failure "Npm package was not found on the server (HTTP $response)"
-            echo "Full response from Verdaccio:"
-            cat /tmp/npm_response.json
-            echo "Search results on Verdaccio:"
-            curl -s "http://workflow-test-registry:4873/-/verdaccio/packages" | grep '"name":"testproject"'
-        fi
+          if [ "$response" -eq 200 ]; then
+              success "Npm package was published successfully"
+          else
+              failure "Npm package was not found on the server (HTTP $response)"
+              echo "Full response from Verdaccio:"
+              cat /tmp/npm_response.json
+              echo "Search results on Verdaccio:"
+              curl -s "http://workflow-test-registry:4873/-/verdaccio/packages" | grep '"name":"testproject"'
+          fi
 
     # - name: Capture Verdaccio logs
     #   if: always()
