--- a/tests/workflow-test/action.yaml
+++ b/tests/workflow-test/action.yaml
@@ -14,8 +14,8 @@ runs:
     - name: Prepare test-reporter script for container
       shell: bash
       run: |
-        mkdir -p .github-actions-publish-npm
-        cp -f ./tests/test-reporter.sh .github-actions-publish-npm/
+        mkdir -p "${{ github.workspace }}/.github-actions-publish-npm"
+        cp "${{ github.workspace }}/tests/test-reporter.sh" "${{ github.workspace }}/.github-actions-publish-npm/"
 
     - name: Prepare test environment
       shell: bash
@@ -82,17 +82,24 @@ runs:
           source /src/.github-actions-publish-npm/test-reporter.sh
           set_test_name "Assert npm package was published"
 
-          response=$(curl -s -o /tmp/npm_response.json -w "%{http_code}" "http://workflow-test-registry:4873/testproject/1.0.0-${{ github.run_id }}-${{ github.run_attempt }}.json")
+          version="1.0.0-${{ github.run_id }}-${{ github.run_attempt }}"
 
-          if [ "$response" -eq 200 ]; then
+          # Retry logic: wait up to 5 seconds for Verdaccio to register the new version
+          for i in {1..5}; do
+            response=$(curl -s -o /tmp/npm_response.json -w "%{http_code}" "http://workflow-test-registry:4873/testproject/${version}.json")
+            if [ "$response" -eq 200 ]; then
               success "Npm package was published successfully"
-          else
-              failure "Npm package was not found on the server (HTTP $response)"
-              echo "Full response from Verdaccio:"
               cat /tmp/npm_response.json
-              echo "Search results on Verdaccio:"
-              curl -s "http://workflow-test-registry:4873/-/verdaccio/packages" | grep '"name":"testproject"'
-          fi
+              exit 0
+            fi
+            sleep 1
+          done
+
+          failure "Npm package was not found on the server (HTTP $response)"
+          echo "Full response from Verdaccio:"
+          cat /tmp/npm_response.json
+          echo "Search results on Verdaccio:"
+          curl -s "http://workflow-test-registry:4873/-/verdaccio/packages" | grep '"name":"testproject"'
 
     - name: Clean up test environment
       shell: bash
