--- a/tests/workflow-test/action.yaml
+++ b/tests/workflow-test/action.yaml
@@ -49,7 +49,7 @@ runs:
       shell: bash
       if: always()
       run: |
-        source ${{ github.workspace }}/.ci-scripts/test-reporter.sh
+        source ${{ github.workspace }}/tests/test-reporter.sh
         set_test_name "Assert custom devcontainer was used"
 
         log_file="${{ github.workspace }}/tests/workflow-test/logs/devcontainer.log"
@@ -72,7 +72,8 @@ runs:
       with:
         push: never
         runCmd: |
-          source /src/.ci-scripts/test-reporter.sh
+          ls
+          source /src/tests/test-reporter.sh
           set_test_name "Assert npm package was published"
 
           version="1.0.0-${{ github.run_id }}-${{ github.run_attempt }}"
