--- a/tests/workflow-test/action.yaml
+++ b/tests/workflow-test/action.yaml
@@ -72,8 +72,13 @@ runs:
       with:
         push: never
         runCmd: |
+          echo "*******HERE******"
           ls
-          source /src/tests/test-reporter.sh
+          cat tests/test-reporter.sh
+          cd tests
+          ls
+
+          source tests/test-reporter.sh
           set_test_name "Assert npm package was published"
 
           version="1.0.0-${{ github.run_id }}-${{ github.run_attempt }}"
