--- a/tests/workflow-test/action.yaml
+++ b/tests/workflow-test/action.yaml
@@ -73,12 +73,12 @@ runs:
         push: never
         runCmd: |
           echo "*******HERE******"
+          pwd
           ls
-          cat tests/test-reporter.sh
           cd tests
           ls
 
-          source tests/test-reporter.sh
+          source test-reporter.sh
           set_test_name "Assert npm package was published"
 
           version="1.0.0-${{ github.run_id }}-${{ github.run_attempt }}"
