--- a/tests/workflow-test/action.yaml
+++ b/tests/workflow-test/action.yaml
@@ -79,7 +79,7 @@ runs:
 
           # Retry logic: wait up to 5 seconds for Verdaccio to register the new version
           for i in {1..5}; do
-            response=$(curl -s -o /tmp/npm_response.json -w "%{http_code}" "http://workflow-test-registry:4873/testproject/${version}.tgz")
+            response=$(curl -s -o /tmp/npm_response.json -w "%{http_code}" "http://workflow-test-registry:4873/testproject/testproject-${version}.tgz")
             if [ "$response" -eq 200 ]; then
               success "Npm package was published successfully"
               cat /tmp/npm_response.json
@@ -92,7 +92,8 @@ runs:
           echo "Full response from Verdaccio:"
           cat /tmp/npm_response.json
           echo "Search results on Verdaccio:"
-          curl -s "http://workflow-test-registry:4873/-/verdaccio/packages" | grep '"name":"testproject"'
+          curl -s "http://workflow-test-registry:4873/-/verdaccio/packages" 
+          # | grep '"name":"testproject"'
 
     - name: Clean up test environment
       shell: bash
