--- a/tests/workflow-test/action.yaml
+++ b/tests/workflow-test/action.yaml
@@ -77,23 +77,31 @@ runs:
 
           version="1.0.0-${{ github.run_id }}-${{ github.run_attempt }}"
 
-          # Retry logic: wait up to 5 seconds for Verdaccio to register the new version
+          expected_name="testproject"
+
           for i in {1..5}; do
-            response=$(curl -s -o /tmp/npm_response.json -w "%{http_code}" "http://workflow-test-registry:4873/testproject/testproject-${version}.tgz")
+            response=$(curl -s -o /tmp/npm_response.json -w "%{http_code}" \
+              "http://workflow-test-registry:4873/${expected_name}")
+
             if [ "$response" -eq 200 ]; then
-              success "Npm package was published successfully"
-              cat /tmp/npm_response.json
-              exit 0
+              if jq -e ".versions[\"${version}\"] | select(.name == \"${expected_name}\")" /tmp/npm_response.json > /dev/null; then
+                success "Package ${expected_name}@${version} was published successfully"
+                exit 0
+              fi
             fi
+
             sleep 1
           done
 
-          failure "Npm package was not found on the server (HTTP $response)"
+          failure "Package ${expected_name}@${version} was not found in registry (HTTP $response)"
+          cat /tmp/npm_response.json
+
           echo "Full response from Verdaccio:"
           cat /tmp/npm_response.json
           echo "Search results on Verdaccio:"
           curl -s "http://workflow-test-registry:4873/-/verdaccio/packages" 
-          # | grep '"name":"testproject"'
+
+          exit 1
 
     - name: Clean up test environment
       shell: bash
