--- a/tests/auth/config.yaml
+++ b/tests/auth/config.yaml
@@ -1,8 +1,11 @@
 storage: /verdaccio/storage
-auth:
-  htpasswd:
-    file: /verdaccio/conf/htpasswd
-    max_users: 1000
+middlewares:
+  '@wunderwerk/verdaccio-static-access-token-middleware-plugin':
+    enabled: true
+    staticAccessTokens:
+      - key: verdaccio-token
+        user: verdaccio-user
+        readonly: false
 uplinks:
   npmjs:
     url: https://registry.npmjs.org/
@@ -12,5 +15,5 @@ packages:
     publish: $authenticated
     proxy: npmjs
 log:
-  level: info
-  
+  level: trace
+plugins: /verdaccio/plugins
