Map each verdaccio volume separately

--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -23,6 +23,8 @@ services:
     ports:
       - "4873:4873"
     volumes:
-      - ../tests/verdaccio:/verdaccio
+      - ../tests/verdaccio/conf:/verdaccio/conf
+      - ../tests/verdaccio/plugins:/verdaccio/plugins
+      - ../tests/verdaccio/storage:/verdaccio/storage
     networks:
       - actions-publish-npm-dev-network
