--- a/tests/workflow-test/action.yaml
+++ b/tests/workflow-test/action.yaml
@@ -104,6 +104,9 @@ runs:
           mv "${{ github.workspace }}/.devcontainer.bak" "${{ github.workspace }}/.devcontainer"
         fi
 
+        # Clean up published packages
+        find /src/tests/verdaccio/storage -type f -name '*.tgz' -exec dirname {} \; | xargs rm -rf
+
     - name: Finalize test
       shell: bash
       if: always()
