--- a/tests/workflow-test/action.yaml
+++ b/tests/workflow-test/action.yaml
@@ -105,7 +105,7 @@ runs:
         fi
 
         # Clean up published packages
-        find /src/tests/verdaccio/storage -type f -name '*.tgz' -exec dirname {} \; | xargs rm -rf
+        find ${{ github.workspace }}/tests/verdaccio/storage -type f -name '*.tgz' -exec dirname {} \; | xargs rm -rf
 
     - name: Finalize test
       shell: bash
