More comprehensive dependabot file

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -1,6 +1,32 @@
 version: 2
 updates:
-  - package-ecosystem: github-actions
-    directory: /
+  - package-ecosystem: docker
+    directory: /src
     schedule:
       interval: daily
+    ignore:
+      - dependency-name: "docker.io/library/node"
+        update-types: ["version-update:semver-major"]
+    groups:
+      all-actions:
+        patterns:
+          - "*"
+  - package-ecosystem: "docker-compose"
+    directories:
+      - "**/*"
+    schedule:
+      interval: "daily"
+    groups:
+      all-actions:
+        patterns:
+          - "*"
+  - package-ecosystem: github-actions
+    directories:
+      - /
+      - "**/*"
+    schedule:
+      interval: daily
+    groups:
+      all-actions:
+        patterns:
+          - "*"
