--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -1,7 +1,8 @@
 version: 2
 updates:
   - package-ecosystem: docker
-    directory: /src
+    directories:
+      - "**/*"
     schedule:
       interval: daily
     ignore:
