--- a/tests/workflow-test/devcontainer-to-publish/Dockerfile
+++ b/tests/workflow-test/devcontainer-to-publish/Dockerfile
@@ -1,4 +1,3 @@
-ARG VARIANT=22.14.0-bookworm
-FROM docker.io/library/node:${VARIANT}
+FROM docker.io/library/node:22.14.0-bookworm
 
 ENTRYPOINT ["/bin/bash", "-c", "mkdir -p /logs && echo \"CUSTOM_DEVCONTAINER: workflow-test-container\" > /logs/devcontainer.log && exec \"$@\"", "--"]
