--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -6,17 +6,17 @@ updates:
     schedule:
       interval: daily
     ignore:
-      - dependency-name: "library/node"
+      - dependency-name: library/node
         update-types: ["version-update:semver-major"]
     groups:
       all-actions:
         patterns:
           - "*"
-  - package-ecosystem: "docker-compose"
+  - package-ecosystem: docker-compose
     directories:
       - "**/*"
     schedule:
-      interval: "daily"
+      interval: daily
     groups:
       all-actions:
         patterns:
