--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -17,6 +17,8 @@ updates:
       - "**/*"
     schedule:
       interval: daily
+    ignore:
+      - dependency-name: localhost
     groups:
       all-actions:
         patterns:
