--- a/action.yaml
+++ b/action.yaml
@@ -32,6 +32,14 @@ inputs:
 runs:
   using: composite
   steps:
+    - name: Login to GitHub container registry
+      if: inputs.registryHost != '' && inputs.registryUsername != '' && inputs.registryPassword != ''
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ inputs.registryHost }}
+        username: ${{ inputs.registryUsername }}
+        password: ${{ inputs.registryPassword }}
+        
     - id: prepare
       name: Prepare devcontainer environment
       shell: bash
